--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <div class="content">
             <h3 class="subtitle is-5">Key Features:</h3>
             <ul>
-              <li>📦 300 Single-app Tasks and 40 Multi-app Tasks</li>
+              <li>📦 300 Single-app Tasks and 40 Cross-app Tasks</li>
               <li>🌐 66 Apps including 52 Third-party Apps, 7 Google Apps and 7 System Apps</li>
               <li>📊 3 Difficulty Levels</li>
               <li>🌍 2 Languages: Chinese and English Apps</li>
