--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               <li>📦 300 Single-app Tasks and 40 Cross-app Tasks</li>
               <li>🌐 66 Apps including 52 Third-party Apps, 7 Google Apps and 7 System Apps</li>
               <li>📊 3 Difficulty Levels</li>
-              <li>🌍 2 Languages: Chinese and English Apps</li>
+              <li>🌍 2 Languages – Chinese and English Apps</li>
               <li>🎨 Human Annotated Trajectories & Key Components</li>
           </ul>
         </div>
@@ -277,14 +277,14 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title has-text-centered">Evaluation Pipeline</h2>
+      <h2 class="title has-text-centered">Automatic Evaluation Pipeline</h2>
       <div class="columns is-centered">
         <div class="column is-four-fifths">
           <div class="content">
             <h3 class="subtitle is-5">Key Features:</h3>
             <ul>
               <li>🔍 7 Metrics for Comprehensive Evaluation</li>
-              <li>📐 Automatic Coarse-and-Fine Success Detection Pipeline – Requires No Further Human Effort</li>
+              <li>📐 Coarse-and-Fine Success Detection Pipeline – Requires No Further Human Effort</li>
               <li>🔀 Trajectory Splitting & Subtask Evaluation – Tailored for Long-Sequence Tasks</li>
               <li>🏆 Single-app Tasks – Achieved F1-scores of 0.926 (English) and 0.884 (Chinese)</li>
               <li>🌟 Cross-app Tasks – Achieved F1-scores of 0.833 (English) and 0.857 (Chinese)</li>
@@ -546,6 +546,7 @@
   #results-table > thead > tr > th {
     padding: 0.5rem;
     text-align: center;
+    vertical-align: middle;
   }
   #results-table > tbody > tr > td {
     padding: 0.5rem;
