Remove author links

--- a/SPA-Bench/index.html
+++ b/SPA-Bench/index.html
@@ -55,55 +55,55 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="#" target="_blank">Derek Yuen</a><sup>1 *</sup>,
+                Derek Yuen<sup>1 *</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Jingxuan Chen</a><sup>1 *</sup>,
+                Jingxuan Chen<sup>1 *</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Bin Xie</a><sup>2</sup>,
+                Bin Xie<sup>2</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Yuhao Yang</a><sup>1</sup>,
+                Yuhao Yang<sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Gongwei Chen</a><sup>2</sup>,
+                Gongwei Chen<sup>2</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Zhihao Wu</a><sup>1</sup>,
+                Zhihao Wu<sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Yixing Li</a><sup>2</sup>,
+                Yixing Li<sup>2</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Xurui Zhou</a><sup>2</sup>,
+                Xurui Zhou<sup>2</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Weiwen Liu</a><sup>1</sup>,
+                Weiwen Liu<sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Shuai Wang</a><sup>1</sup>,
+                Shuai Wang<sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Kaiwen Zhou</a><sup>1</sup>,
+                Kaiwen Zhou<sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Rui Shao</a><sup>2,†</sup>,
+                Rui Shao<sup>2,†</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Liqiang Nie</a><sup>2</sup>,
+                Liqiang Nie<sup>2</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Yasheng Wang</a><sup>1</sup>,
+                Yasheng Wang<sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Jianye Hao</a><sup>1</sup>,
+                Jianye Hao<sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Jun Wang</a><sup>3</sup>,
+                Jun Wang<sup>3</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Kun Shao</a><sup>1,†</sup>
+                Kun Shao<sup>1,†</sup>
               </span>
               </div>
 
