Update author format

--- a/SPA-Bench/index.html
+++ b/SPA-Bench/index.html
@@ -88,7 +88,7 @@
                 Kaiwen Zhou<sup>1</sup>,
               </span>
               <span class="author-block">
-                Rui Shao<sup>2,†</sup>,
+                Rui Shao<sup>2 †</sup>,
               </span>
               <span class="author-block">
                 Liqiang Nie<sup>2</sup>,
@@ -103,7 +103,7 @@
                 Jun Wang<sup>3</sup>,
               </span>
               <span class="author-block">
-                Kun Shao<sup>1,†</sup>
+                Kun Shao<sup>1 †</sup>
               </span>
               </div>
 
