Remove video from DistRL

--- a/DistRL/index.html
+++ b/DistRL/index.html
@@ -145,8 +145,7 @@
               <h3 class="subtitle is-5">Demo:</h3>
               <video poster="" id="tree" autoplay controls muted loop height="100%">
                 <!-- Your video here -->
-                <source src="static/videos/benchmark_demo_0910_1080p_compressed.mp4"
-                type="video/mp4">
+                <!-- <source src="" type="video/mp4"> -->
               </video>
            
           </div>
