--- a/DistRL/index.html
+++ b/DistRL/index.html
@@ -220,7 +220,7 @@
  
 
 <!-- Results -->
-<section class="hero is-small is-light">
+<section class="hero is-small">
   <div class="hero-body">
     <div class="container">
       <h2 class="title has-text-centered">Results</h2>
