Update SPA-Bench web

--- a/SPA-Bench/index.html
+++ b/SPA-Bench/index.html
@@ -139,7 +139,7 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/jingxuanchen916/Smartphone-Agent-Benchmark/tree/dev" target="_blank"
+                    <a href="https://github.com/ai-agents-2012/SPA-Bench" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -160,7 +160,7 @@
               </span>
               
               <span class="link-block">
-                <a href="https://github.com/jingxuanchen916/Smartphone-Agent-Benchmark/tree/dev/data" target="_blank"
+                <a href="https://arxiv.org/pdf/2410.15164#page=14" target="_blank"
                 class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                   <i class="fas fa-list"></i>
@@ -321,11 +321,11 @@
           <div class="content">
             <h3 class="subtitle is-5">Key Features:</h3>
             <ul>
-              <li>📦 300 Single-app Tasks and 40 Cross-app Tasks</li>
-              <li>🌐 66 Apps including 52 Third-party Apps, 7 Google Apps and 7 System Apps</li>
-              <li>📊 3 Difficulty Levels</li>
-              <li>🌍 2 Languages – Chinese and English Apps</li>
-              <li>🎨 Human Annotated Trajectories & Key Components</li>
+              <li>📦 <b>300 Single-app Tasks</b> and <b>40 Cross-app Tasks</b></li>
+              <li>🌐 <b>66 Apps</b> – 52 Third-party Apps, 7 Google Apps and 7 System Apps</li>
+              <li>📊 <b>3 Difficulty Levels</b></li>
+              <li>🌍 <b>2 Languages</b> – Chinese and English Apps</li>
+              <li>🎨 <b>Human Annotated Trajectories & Key Components</b></li>
           </ul>
         </div>
         <div id="results-carousel" class="carousel results-carousel">
@@ -358,10 +358,10 @@
           <div class="content">
             <h3 class="subtitle is-5">Key Features:</h3>
             <ul>
-              <li>🤖 11 Smartphone Agents</li>
-              <li>🧩 Easy Integration of Your Own Agents with Minimal Code Changes</li>
-              <li>📱 Scalable Framework with Multi-device Support and Use of Emulators</li>
-              <li>📸 Android Snapshot for Local Environment & Data Reset</li>
+              <li>🤖 <b>11 Smartphone Agents</b> Ready for Evaluation</li>
+              <li>🧩 <b>Easy Integration</b> of Your Own Agents with Minimal Code Changes</li>
+              <li>📱 <b>Scalable Design</b> – Multi-device support & Emulator Compatibility</li>
+              <li>📸 <b>Android Snapshot</b> – Local Environment Setup and Data Reset for Consistent Testing</li>
           </ul>
         </div>
          
@@ -385,11 +385,11 @@
           <div class="content">
             <h3 class="subtitle is-5">Key Features:</h3>
             <ul>
-              <li>🔍 7 Metrics for Comprehensive Evaluation</li>
-              <li>📐 Coarse-and-Fine Success Detection Pipeline – Requires No Further Human Effort</li>
-              <li>🔀 Trajectory Splitting & Subtask Evaluation – Tailored for Long-Sequence Tasks</li>
-              <li>🏆 Single-app Tasks – Achieved F1-scores of 0.926 (English) and 0.884 (Chinese)</li>
-              <li>🌟 Cross-app Tasks – Achieved F1-scores of 0.833 (English) and 0.857 (Chinese)</li>
+              <li>🔍 <b>7 Evaluation Metrics</b> for a Comprehensive Analysis</li>
+              <li>📐 <b>Coarse-and-Fine Success Detection Pipeline</b> – Requires No Further Human Effort</li>
+              <li>🔀 <b>Trajectory Splitting & Subtask Evaluation</b> – Tailored for Long-Sequence Tasks</li>
+              <li>🏆 Single-app Tasks – Achieved F1-scores of <b>0.926 (English)</b> and <b>0.884 (Chinese)</b></li>
+              <li>🌟 Cross-app Tasks – Achieved F1-scores of <b>0.833 (English)</b> and <b>0.857 (Chinese)</b></li>
           </ul>
         </div>
         <div id="results-carousel-2" class="carousel results-carousel">
