--- a/DistRL/index.html
+++ b/DistRL/index.html
@@ -55,7 +55,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://www.linkedin.com/in/taiyi-wang-3438121a2/" target="_blank">Taiyi Wang</a><sup>1 2 * †</sup>,
+                Taiyi Wang<sup>1 2 * †</sup>,
               </span>
               <span class="author-block">
                 Zhihao Wu<sup>3 *</sup>,
