--- a/SPA-Bench/index.html
+++ b/SPA-Bench/index.html
@@ -5,7 +5,7 @@
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
   <meta name="description" content="SPA-Bench: A Comprehensive Benchmark for Smartphone Agent Evaluation">
-  <meta property="og:title" content="SPA-Bench"/>
+  <meta property="og:title" content="SPA-Bench: A Comprehensive Benchmark for Smartphone Agent Evaluation"/>
   <meta property="og:description" content="A Comprehensive Benchmark for Smartphone Agent Evaluation"/>
   <meta property="og:url" content="https://ai-agents-2030.github.io/SPA-Bench/"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
