--- a/DistRL/index.html
+++ b/DistRL/index.html
@@ -84,7 +84,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/2410.14803" target="_blank"
+                        <a href="https://ai-agents-2030.github.io/DistRL/static/documents/DistRL_arxiv.pdf" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
