--- a/SPA-Bench/index.html
+++ b/SPA-Bench/index.html
@@ -314,16 +314,16 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title has-text-centered">Task Collection</h2>
+      <h2 class="title has-text-centered">📋 Diverse and Realistic Task Design</h2>
       <div class="columns is-centered">
         <div class="column is-four-fifths">
           <div class="content">
             <h3 class="subtitle is-5">Key Features:</h3>
             <ul>
-              <li>📦 <b>300 Single-app Tasks</b> and <b>40 Cross-app Tasks</b></li>
+              <li>📦 <b>340 Tasks</b> - 300 Single-app Tasks and 40 Cross-app Tasks
               <li>🌐 <b>66 Apps</b> – 52 Third-party Apps, 7 Google Apps and 7 System Apps</li>
-              <li>📊 <b>3 Difficulty Levels</b></li>
               <li>🌍 <b>2 Languages</b> – Chinese and English Apps</li>
+              <li>📊 <b>Increased Difficulty Levels</b></li>
               <li>🎨 <b>Human Annotated Trajectories & Key Components</b></li>
           </ul>
         </div>
@@ -351,13 +351,13 @@
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title has-text-centered">Plug-and-Play Agent Framework</h2>
+      <h2 class="title has-text-centered">🤖 Plug-and-Play Agent Framework</h2>
       <div class="columns is-centered">
         <div class="column is-four-fifths">
           <div class="content">
             <h3 class="subtitle is-5">Key Features:</h3>
             <ul>
-              <li>🤖 <b>11 Smartphone Agents</b> Ready for Evaluation</li>
+              <li>🧠 <b>11 Smartphone Agents</b> Ready for Evaluation</li>
               <li>🧩 <b>Easy Integration</b> of Your Own Agents with Minimal Code Changes</li>
               <li>📱 <b>Scalable Design</b> – Multi-device support & Emulator Compatibility</li>
               <li>📸 <b>Android Snapshot</b> – Local Environment Setup and Data Reset for Consistent Testing</li>
@@ -378,7 +378,7 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title has-text-centered">Automatic Evaluation Pipeline</h2>
+      <h2 class="title has-text-centered">✅ Automatic and Scalable Evaluation Pipeline</h2>
       <div class="columns is-centered">
         <div class="column is-four-fifths">
           <div class="content">
