--- a/SPA-Bench/index.html
+++ b/SPA-Bench/index.html
@@ -160,7 +160,7 @@
               </span>
               
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2410.15164#page=14" target="_blank"
+                <a href="https://github.com/ai-agents-2030/SPA-Bench/tree/main/data" target="_blank"
                 class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                   <i class="fas fa-list"></i>
