--- a/VSC-RL/index.html
+++ b/VSC-RL/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
-  <meta name="description" content="DistRL: An Asynchronous Distributed Reinforcement Learning Framework for On-Device Control Agents">
-  <meta property="og:title" content="DistRL: An Asynchronous Distributed Reinforcement Learning Framework for On-Device Control Agents"/>
-  <meta property="og:description" content="An Asynchronous Distributed Reinforcement Learning Framework for On-Device Control Agents"/>
-  <meta property="og:url" content="https://ai-agents-2030.github.io/DistRL/"/>
+  <meta name="description" content="VSC-RL: Advancing Autonomous Vision-Language Agents with Variational Subgoal-Conditioned Reinforcement Learning">
+  <meta property="og:title" content="VSC-RL: Advancing Autonomous Vision-Language Agents with Variational Subgoal-Conditioned Reinforcement Learning"/>
+  <meta property="og:description" content="VSC-RL: Advancing Autonomous Vision-Language Agents with Variational Subgoal-Conditioned Reinforcement Learning"/>
+  <meta property="og:url" content="https://ai-agents-2030.github.io/VSC-RL/"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
   <!-- <meta property="og:image" content="static/image/your_banner_image.png" />
   <meta property="og:image:width" content="1200"/>
@@ -20,7 +20,7 @@
   <!-- <meta name="twitter:image" content="static/images/your_twitter_banner_image.png">
   <meta name="twitter:card" content="summary_large_image"> -->
   <!-- Keywords for your paper to be indexed by-->
-  <meta name="keywords" content="DistRL, Asynchronous Distributed Reinforcement Learning, On-Device Control Agents">
+  <meta name="keywords" content="vision-language agent, vision-language model, reinforcement learning">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
