Fix results image on VSC-RL page

--- a/VSC-RL/index.html
+++ b/VSC-RL/index.html
@@ -234,7 +234,7 @@
       <h2 class="title has-text-centered">Results</h2>
       <div class="columns is-centered">
         <div class="column is-three-fifths">
-          <img src="static/images/results-aitw.PNG" width="100%">
+          <img src="static/images/results-aitw.png" width="100%">
           <h2 class="subtitle has-text-centered" style="font-size: 1rem; margin-top: 1rem;">
             VSC-RL significantly outperforms all baselines in both the AitW General and Web Shopping tasks, achieving a final success rate of 0.75 in the General task and 0.6 in the Web Shopping task, surpassing DigiRL and other agents.
           </h2>
