--- a/VSC-RL/index.html
+++ b/VSC-RL/index.html
@@ -25,7 +25,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MathJax Example</title>
+  <title>VSC-RL</title>
   <script type="text/javascript" async
       src="https://polyfill.io/v3/polyfill.min.js?features=es6">
   </script>
