--- a/VSC-RL/index.html
+++ b/VSC-RL/index.html
@@ -91,7 +91,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://paper_link" target="_blank"
+                        <a href="https://arxiv.org/pdf/2502.07949" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -124,7 +124,7 @@
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://arxiv_link" target="_blank"
+                  <a href="https://arxiv.org/abs/2502.07949" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
