Update BibTex and code link for VSC-RL

--- a/VSC-RL/index.html
+++ b/VSC-RL/index.html
@@ -113,7 +113,7 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://code_link" target="_blank"
+                    <a href="https://github.com/ai-agents-2030/VSC_RL" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -350,7 +350,12 @@
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>
-@
+@article{wu2025vsc,
+  title={VSC-RL: Advancing Autonomous Vision-Language Agents with Variational Subgoal-Conditioned Reinforcement Learning},
+  author={Wu, Qingyuan and Liu, Jianheng and Hao, Jianye and Wang, Jun and Shao, Kun},
+  journal={arXiv preprint arXiv:2502.07949},
+  year={2025}
+}
       </code></pre>
     </div>
 </section>
