Update VSC-RL page

--- a/VSC-RL/index.html
+++ b/VSC-RL/index.html
@@ -252,19 +252,32 @@
   <div class="hero-body">
     <div class="container">
       <h2 class="title has-text-centered">Results</h2>
+
       <div class="columns is-centered">
+        <div class="column is-four-fifths">
+          <div class="content">         
+            To evaluate the efficacy of <b>VSC-RL</b>, we conducted extensive experiments on challenging vision-language decision-making benchmarks, 
+            particularly focusing on mobile device control tasks in the <b>AitW General</b> and <b>Web Shopping</b> datasets. Our results demonstrate that 
+            VSC-RL significantly improves both <b>learning efficiency</b> and <b>task success rate</b> compared to state-of-the-art (SOTA) baselines.
+          </div>
+        </div>
+      </div>
+
+      <div class="columns is-centered">
+        <br>
+        <br>
         <br>
         <br>
         <div class="columns is-centered" style="text-align: center;">
           <div class="column is-12" style="text-align: center;">
-            <img src="static/images/results-aitw.png" style="width: 60%; height: auto; object-fit: cover; margin: 0 auto;">
-            <h2 class="subtitle has-text-centered" style="font-size: 1rem; margin-top: 1rem; text-align: center; width: 60%; margin: 0 auto;">
-              VSC-RL significantly outperforms all baselines in both the AitW General and Web Shopping tasks, achieving a final success rate of 0.75 in the General task and 0.6 in the Web Shopping task, surpassing DigiRL and other agents.
+            <img src="static/images/results-aitw.png" style="width: 70%; height: auto; object-fit: cover; margin: 0 auto;">
+            <h2 class="subtitle has-text-centered" style="font-size: 1rem; margin-top: 1rem; text-align: center; width: 70%; margin: 0 auto;">
+              VSC-RL significantly outperforms all baselines in both the AitW General and Web Shopping tasks, achieving a final success rate of 0.75 in the General task and 0.6 in the Web Shopping task, surpassing the best baseline DigiRL by 15% and 20% seperately.
             </h2>
           </div>
         </div>
+
       </div>      
-      <br>
       <br>
       <div class="columns is-centered">
         <div class="column is-four-fifths">
