--- a/ViMo/index.html
+++ b/ViMo/index.html
@@ -81,7 +81,7 @@
 
             <div class="is-size-5 publication-authors">
               <span class="author-block"><sup>1</sup>Queen Mary University of London</span>
-              <span class="author-block"><sup>2</sup>Oxford University</span>
+              <span class="author-block"><sup>2</sup>University of Oxford</span>
               <span class="author-block"><sup>3</sup>Huawei Noah's Ark Lab</span>
               <span class="author-block"><sup>4</sup>University College London</span>
               <span class="eql-cntrb"><small><br><sup>*</sup> Equal Contribution</small></span>
